--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,7 @@
  
 akka {
 
-  log-config-on-start = on
+  log-config-on-start = off
   # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
   # to STDOUT)
   # loggers = ["akka.event.slf4j.Slf4jLogger"]
